# reactome-ingest

./: .copier-answers.yml  LICENSE  README.md  download.yaml  justfile  pyproject.toml
.github/workflows/: release.yaml
src/: chemical_to_pathway.py  chemical_to_pathway.yaml  gene_to_pathway.py  gene_to_pathway.yaml  pathway.py  pathway.yaml
tests/: test_chemical_to_pathway.py  test_gene_to_pathway.py  test_pathway.py
